...
                        <constraint firstAttribute="height" constant="16" id="crt-Vm-piH"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <nil key="highlightedColor"/>
                </label>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nyt_logo" translatesAutoresizingMaskIntoConstraints="NO" id="BcN-jH-Gac">
                    <rect key="frame" x="0.0" y="0.0" width="355" height="79"/>
                </imageView>
            </subviews>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <constraints>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Wnp-Dy-iDo" secondAttribute="bottom" id="COJ-Nz-ebO"/>
...
